# optlang

./: .codeclimate.yml  .coveragerc  .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTES.md  README.md  README.rst  appveyor.yml  index.html  modifications_tracker.md  optlang.ipynb  optlang.sublime-project  optlang.sublime-workspace  params.json  pyproject.toml  requirements.txt  requirements_rtd.txt  setup.cfg  setup.py  symbolic.ipynb  test_requirements.txt  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: cron.yml  main.yml  release.yml  test.yml
.travis/: install_cplex.sh
docs/: Makefile  NOTES.md  make.bat  objective.uml  observable_design.ipynb  optlang.ipynb  slot_children.ipynb
docs/source/: API.rst  Configuration.rst  Constraint.rst  Model.rst  Objective.rst  Variable.rst  conf.py  developers.rst  index.rst  installation.rst  interface.rst  logging.rst  optimization_and_solution_retrieval.rst  problem_formulation.rst  solver_parameters.rst  util.rst
examples/: MILPexample2d.py  min_max_problem.py  plot_opt_2d.py  simple.py  simple_numpy.py
optlang/: __init__.py  _version.py  coinor_cbc_interface.py  container.py  cplex_interface.py  crap.py  deap_interface.py  duality.py  exceptions.py  expression_parsing.py  gams_interface.py  glpk_exact_interface.py  glpk_interface.py  gurobi_interface.py  inspyred_interface.py  interface.py  old_interface.py  osqp_interface.py  scipy_interface.py  soplex_interface.py  symbolics.py  util.py
optlang/glpk/: __init__.py  config.py  model.py
optlang/interface/: __init__.py  change_tracker.py  changeset.py  config.py  constraint.py  expression.py  model.py  objective.py  parameter.py  symbolic_parameter.py  variable.py
optlang/interface/mixins/: __init__.py  bounds_mixin.py  name_mixin.py  observable_mixin.py  observer_mixin.py
optlang/interface/trackers/: bounds.py  constraint.py  objective.py
optlang/symbols/: symengine_facade.py  sympy_facade.py
optlang/tests/: __init__.py  abstract_test_cases.py  test_change_solver.py  test_coinor_cbc_interface.py  test_container.py  test_cplex_interface.py  test_duality.py  test_expression_parsing.py  test_gams_interface.py  test_glpk_exact_interface.py  test_glpk_interface.py  test_gurobi_interface.py  test_gurobi_solver.py  test_inspyred_interface.py  test_interface.py  test_io.py  test_netlib_cplex_interface.py  test_netlib_glpk_interface.py  test_netlib_gurobi_interface.py  test_osqp_interface.py  test_scipy_interface.py  test_soplex_interface.py  test_symbolics.py  test_util.py
optlang/tests/data/: alternative_model.lp  coli_core.json  model.lp  qp.lp  the_final_netlib_results.pcl
paper/: paper.bib  paper.md
slow_tests/: README.md  test_miplib_cplex_interface.py  test_miplib_glpk_interface.py  test_miplib_gurobi_interface.py
slow_tests/data/: miplib2003.json
src/optlang/: __init__.py  _version.py  coinor_cbc_interface.py  cplex_interface.py  duality.py  exceptions.py  expression_parsing.py  glpk_exact_interface.py  glpk_interface.py  gurobi_interface.py  hybrid_interface.py  interface.py  matrix_interface.py  osqp_interface.py  scipy_interface.py  symbolics.py  util.py
src/optlang/glpk/: config.py  model.py
src/optlang/interface/: __init__.py  config.py  constraint.py  expression.py  expression_parsing.py  model.py  objective.py  optimization_expression.py  status.py  symbolic_parameter.py  variable.py
src/optlang/interface/change_tracker/: __init__.py  base_change_tracker.py  bounds_change_tracker.py  constraint_change_tracker.py  expression_change_tracker.py  name_change_tracker.py  objective_change_tracker.py  variable_change_tracker.py
src/optlang/interface/mixin/: __init__.py  (+5 more)
src/optlang/symbols/: __init__.py  symengine_facade.py  sympy_facade.py
src/optlang/tests/: __init__.py  abstract_test_cases.py  test_change_solver.py  test_coinor_cbc_interface.py  test_container.py  test_cplex_interface.py  test_duality.py  test_elements.py  test_expression_parsing.py  test_glpk_exact_interface.py  test_glpk_interface.py  test_gurobi_interface.py  test_hybrid_interface.py  test_inspyred_interface.py  test_interface.py  test_io.py  test_netlib_cplex_interface.py  test_netlib_glpk_exact_interface.py  test_netlib_glpk_interface.py  test_netlib_gurobi_interface.py  test_osqp_interface.py  test_scipy_interface.py  test_symbolics.py  test_util.py
tests/: conftest.py  test_change_solver.py  test_container.py  test_cplex_interface.py  test_elements.py  test_gams_interface.py  test_glpk_interface.py  test_gurobi_solver.py  test_inspyred_interface.py  test_interface.py  test_io.py  test_miplib_cplex_interface.py  test_miplib_glpk_interface.py  test_netlib_cplex_interface.py  test_netlib_glpk_interface.py  test_netlib_gurobi_interface.py  test_util.py
tests/data/: miplib2003.txt  miplib_benchmark.solutions  parse_the_final_netlib_results.py  qplib_1832.lp  qplib_3256.lp
tests/data/netlib_reference_results/: NOTES.txt
tests/test_integration/: helper_symbolic_bounds.py  helper_symbolic_expression.py  test_constraint_symbolic_parameter.py  test_objective_symbolic_parameter.py  test_variable_symbolic_parameter.py
tests/test_interface/: test_constraint.py  test_expression.py  test_symbolic_parameter.py  test_variable.py
tests/test_interface/test_mixins/: test_bounds_mixin.py  test_name_mixin.py  test_observable_mixin.py  test_observer_mixin.py  test_solver_state_mixin.py  test_subject_mixin.py  test_symbolic_mixin.py  test_value_mixin.py
tests/test_unit/: test_symbols.py
tests/test_unit/test_interface/: test_model.py  test_objective.py  test_optimization_expression.py  test_symbolic_parameter.py  test_variable.py
(+30 files in other folders)
