[metadata]
name = optlang
url = https://github.com/biosustain/optlang
download_url = https://pypi.python.org/pypi/optlang/
author = Nikolaus Sonnenschein
author_email = niko.sonnenschein@gmail.com
maintainer = Kristian Jensen
maintainer_email = krisj@biosustain.dtu.dk
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
license = Apache Software License Version 2.0
description = Formulate optimization problems using sympy expressions and solve them using interfaces to third-party optimization software, e.g., GLPK).
long_description = file: README.rst
keywords =
    optimization
    sympy
    mathematical programming
    heuristic optimization

[options]
packages = find:

[options.extras_require]
scipy = scipy
fast = symengine>=0.3

[versioneer]
VCS = git
style = pep440
versionfile_source = optlang/_version.py
versionfile_build = optlang/_version.py
tag_prefix =
parentdir_prefix = optlang-

[flake8]
max-line-length = 79
exclude =
    __init__.py,
    _version.py,
max-complexity = 20

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[pydocstyle]
match_dir = optlang
