[metadata]
name = optlang
url = https://github.com/biosustain/optlang
download_url = https://pypi.org/project/optlang/
author = Novo Nordisk Foundation Center for Biosustainability, Technical University Denmark
author_email = niso@biosustain.dtu.dk
maintainer = Kristian Jensen
maintainer_email = krisj@biosustain.dtu.dk
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Mathematics
license = Apache Software License Version 2.0
description = Formulate optimization problems using sympy expressions and solve them using interfaces to third-party optimization software, e.g., GLPK.
long_description = file: README.rst
keywords =
    optimization
    sympy
    mathematical programming
    heuristic optimization
    linear programming
    LP
    mixed-integer linear programming
    MILP

[options]
zip_safe = True
install_requires =
    depinfo
    six
    sympy
    swiglpk
    enum34;python_version<"3.4"
python_requires = >=2.7,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:

[options.packages.find]
where = src

[options.extras_require]
scipy = scipy
fast = symengine>=0.3

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 80
exclude =
    __init__.py
    _version.py

[isort]
line_length = 80
indent = 4
multi_line_output = 4
lines_after_imports = 2
known_first_party = optlang
known_third_party =
    depinfo
    six
    sympy
    swiglpk

[versioneer]
VCS = git
style = pep440
versionfile_source = src/optlang/_version.py
versionfile_build = optlang/_version.py
tag_prefix =
parentdir_prefix = optlang-
