[metadata]
name = optlang
url = https://github.com/opencobra/optlang
download_url = https://pypi.org/project/optlang/
project_urls =
    Source Code = https://github.com/opencobra/optlang
    Documentation = https://optlang.readthedocs.io
    Bug Tracker = https://github.com/opencobra/optlang/issues
author = Nikolaus Sonnenschein
author_email = niko.sonnenschein@gmail.com
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Mathematics
license = Apache-2.0
description = Formulate optimization problems using sympy expressions and solve them using interfaces to third-party optimization software (e.g. GLPK).
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    optimization
    mathematical programming
    heuristic optimization
    sympy

[options]
zip_safe = True
install_requires =
    six >=1.9
    swiglpk >=1.4.3
    sympy >=1.0
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
tests_require =
    tox
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox
;test =
;    'nose>=1.3.7',
;    'colorama==0.3.9',
;    'rednose>=0.4.3',
;    'coverage>=4.0.3',
;    'jsonschema>=2.5'

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/optlang/_version.py
versionfile_build = optlang/_version.py
tag_prefix =
parentdir_prefix = optlang-
